--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
       <div class="profile">
         <img src="assets/img/dsn-logo.png" alt="" class="img-fluid">
         <h5 class="arquitect-name mb-1">DIEGO SALDIVIA NUÑEZ</h5>
@@ -47,16 +46,27 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#p1" class="nav-link scrollto"><span>Proyecto los Flamencos</span></a></li>
-          <li><a href="#p2" class="nav-link scrollto"><span>Proyecto la Union</span></a></li>
+          <li>
+            <h6>Planimetrías y modelados 3D</h6>
+            <ul>
+              <li><a href="#p1" class="nav-link scrollto"><span>Proyecto los Flamencos</span></a></li>
+              <li><a href="#p2" class="nav-link scrollto"><span>Proyecto la Union</span></a></li>
+            </ul>
+          </li>
+          <li class="mt-3">
+            <h6>Proyectos Asociados</h6>
+            <ul>
+              <li><a href="#r1" class="nav-link scrollto"><span>Townhouses</span></a></li>
+              <li><a href="#r2" class="nav-link scrollto"><span>Ampliación de vivienda</span></a></li>
+              <li><a href="#r3" class="nav-link scrollto"><span>Vivienda unifamiliar</span></a></li>
+            </ul>
+          </li>
         </ul>
+
+
       </nav>
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/diego-saldivia-nuñez-294b69175" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </header><!-- End Header -->
@@ -72,7 +82,29 @@
 
     <!-- ======= Project 1 ======= -->
     <section id="p1">
-      <div class="container-xxl project" id="p1-images">
+      <div class="container-xxl project" id="p2-images">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-lg-6 mt-4" data-aos="zoom-out" data-aos-duration="300">
+            <img src="assets/img/p2i1.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
+          </div>
+          <div class="col-xs-6 col-sm-6 col-lg-6 mt-4" data-aos="zoom-out" data-aos-duration="300">
+            <div class="row">
+                <div class="col-lg-12" data-aos="zoom-out" data-aos-duration="300">
+                  <img src="assets/img/p2i2.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12" data-aos="zoom-out" data-aos-duration="300">
+                <img src="assets/img/p2i3.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
+              </div>
+            </div>
+      </div>
+          <div class="row render">
+          </div>
+     </section>
+
+    <section id="p2">
+      <div class="container-xxl project  mt-4" id="p1-images">
         <div class="row">
           <div class="col-xs-3 col-sm-3 col-lg-3 mt-4" data-aos="zoom-out" data-aos-duration="300">
             <img src="assets/img/p1i1.webp" class="img-fluid" alt="" data-fancybox="p1-fancybox">
@@ -92,27 +124,174 @@
       </div>
     </section>
 
-    <!-- ======= Project 2 ======= -->
-    <section id="p2">
-      <div class="container-xxl project mt-4" id="p2-images">
-        <div class="row">
-          <div class="col-xs-6 col-sm-6 col-lg-6 mt-4" data-aos="zoom-out" data-aos-duration="300">
-            <img src="assets/img/p2i1.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
-          </div>
-          <div class="col-xs-6 col-sm-6 col-lg-6 mt-4" data-aos="zoom-out" data-aos-duration="300">
-            <div class="row">
-                <div class="col-lg-12" data-aos="zoom-out" data-aos-duration="300">
-                  <img src="assets/img/p2i2.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12" data-aos="zoom-out" data-aos-duration="300">
-                <img src="assets/img/p2i3.webp" class="img-fluid" alt="" data-fancybox="p2-fancybox">
-              </div>
-            </div>
+    <!-- ======= Renders ======= -->
+    <section class="mt-5">
+      <div class="container-xxl">
+        <div class="section-title">
+          <h2>Proyectos Asociados</h2>
+        </div>
       </div>
-          <div class="row render">
+    </section>
+
+    <section id="r1">
+      <div class="container-xxl project  mt-2">
+        <div class="render-title">
+          <h5>Proyecto: Townhouses</h5>
+          <p>Calle Covadonga, Barrio Prat. Punta Arenas</p>
+        </div>
+        <div class="row">
+          <div class="col-xs-8 col-sm-8 col-lg-8 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders/r1p1.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
           </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders/r1p2.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
+              </div>
+            </row>
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders/r1p3.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
+              </div>
+            </row>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders/r1p4.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders/r1p5.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders/r1p6.webp" class="img-fluid  mt-1" alt="" data-fancybox="r1-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+            <div class="render-caption">
+              <p>En este proyecto se trabajó tanto el diseño como la materialidad de la fachada, buscando generar un aspecto sencillo y funcional con matices de colores que se acomoden a su contexto.
+                En el interior se trabajó con su materialidad y se propuso una paleta de colores que permita que sus recintos sean más sobrios y minimalistas.</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="r2">
+      <div class="container-xxl project  mt-5">
+        <div class="render-title">
+          <h5>Proyecto: Ampliación de vivienda</h5>
+          <p>Sargento Aldea, Barrio Prat. Punta Arenas</p>
+        </div>
+        <div class="row">
+
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders2/r2p2.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+              </div>
+            </row>
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders2/r2p3.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+              </div>
+            </row>
+          </div>
+          <div class="col-xs-8 col-sm-8 col-lg-8 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p1.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p4.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p5.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p6.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p7.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p8.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders2/r2p9.webp" class="img-fluid  mt-1" alt="" data-fancybox="r2-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+            <div class="render-caption">
+              <p>Este proyecto se diseñó una ampliación de un segundo nivel para una vivienda unifamiliar, en el cual se buscó generar una volumetría que se acomodara con su entorno y no fuera tan invasiva para su entorno circundante, Con materiales sencillos y una gama de colores que se acomoda a lo pre- existente del proyecto.</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="r3">
+      <div class="container-xxl project  mt-5">
+        <div class="render-title">
+          <h5>Proyecto: Vivienda unifamiliar</h5>
+          <p>Sector Andino, Punta Arenas</p>
+        </div>
+        <div class="row">
+          <div class="col-xs-8 col-sm-8 col-lg-8 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p1.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders3/r3p2.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+              </div>
+            </row>
+            <row>
+              <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+                <img src="assets/img/renders3/r3p3.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+              </div>
+            </row>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p4.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p5.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p6.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p7.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p8.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+          <div class="col-xs-4 col-sm-4 col-lg-4 mt-4" data-aos="fade-up" data-aos-duration="300" >
+            <img src="assets/img/renders3/r3p9.webp" class="img-fluid  mt-1" alt="" data-fancybox="r3-fancybox">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-lg-12 mt-2" data-aos="fade-up" data-aos-duration="300" >
+            <div class="render-caption">
+              <p>Esta obra nueva, se trabajo tanto el aspecto de su fachada como el tipo de sus vanos , siendo una casa con un estilo Nórdico se generó una volumetría exterior muy simplista con una cubierta escondida para resaltar esa imagen de volumen unificado. 
+                Su interior es una planta libre, donde la escalera funciona como eje divisor de los espacios. </p>
+              <p>Su segundo nivel funciona netamente como piso para habitaciones, incorporando ventanales amplios que permitan una óptima iluminación y una perfecta percepción de su entorno.</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
     </section>
     
     <section id="contact" class="contact">
