changes in meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta property="og:type"               content="portfolio" />
+  <meta property="og:title"              content="Diego saldivia Nuñez , Arquitecto" />
+  <meta property="og:description"        content="Portafolio web. Desarrollo de obras nuevas y ampliaciones" />
   <title>Diego Saldivia Nuñez</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
